Changed filterByDescription to filterByName
